[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "private-evolution"
version = "0.0.1"
maintainers = [{ name = "Zinan Lin", email = "zinanlin@microsoft.com" }]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
readme = "README.md"
description = "Differentially private synthetic data via foundation model inference APIs."
dependencies = [
  "matplotlib",
  "clean-fid",
  "omegaconf",
  "pandas",
  "scikit-learn",
  "generalimport",
  "fld@git+https://github.com/marcojira/fld.git",
  "openai",
  "tenacity",
]

[project.optional-dependencies]
dev = ["pre-commit", "black", "sphinx", "sphinx-rtd-theme", "sphinx-toolbox"]
image = [
  "blobfile",
  "torch",
  "imageio",
  "clip@git+https://github.com/openai/CLIP.git",
  "diffusers[pytorch]",
  "transformers",
  "improved-diffusion@git+https://github.com/fjxmlzn/improved-diffusion.git@8f6677c3c47d1c1ad2e22ad2603eaec4cc639805",
  "wilds",
  "cairosvg",
  "python_avatars",
  "azure-identity",
]
text = [
  "gdown",
  "tiktoken",
  "python-dotenv",
  "sentence-transformers",
  "protobuf",
  "sentencepiece",
  "fschat",
  "transformers",
  "accelerate",
  "tqdm",
  "azure-identity",
]

[project.urls]
Homepage = "https://microsoft.github.io/DPSDA/"
Documentation = "https://microsoft.github.io/DPSDA/"
Repository = "https://github.com/microsoft/DPSDA"
"Bug Tracker" = "https://github.com/microsoft/DPSDA/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = [
  "doc*",
  "data*",
  "example*",
  "docker*",
  "amlt*",
  "dist*",
  "_*",
  "result*",
]
